# opengl_starter_template

./: CMakeLists.txt
include/: app.hpp
src/: CMakeLists.txt  main.cpp
src/demo/: CMakeLists.txt  demo.cpp
